added db context

--- a/OrderManagement.Infrastructure/OrderManagement.Infrastructure.csproj
+++ b/OrderManagement.Infrastructure/OrderManagement.Infrastructure.csproj
@@ -23,4 +23,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OrderManagement.Domain\OrderManagement.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
