added jwt authentication

--- a/OrderManagement.Api/appsettings.json
+++ b/OrderManagement.Api/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtSettings": {
+    "SecretKey": "ordermgtsecret",
+    "Issuer": "OrderManagementApi",
+    "Audience": "OrderManagementClient"
+  },
   "AllowedHosts": "*"
 }
