--- a/OrderManagement.Api/appsettings.json
+++ b/OrderManagement.Api/appsettings.json
@@ -9,9 +9,10 @@
     }
   },
   "JwtSettings": {
-    "SecretKey": "ordermgtsecret",
+    "SecretKey": "thisisaverystrongsecretkey123456!",
     "Issuer": "OrderManagementApi",
     "Audience": "OrderManagementClient"
   },
   "AllowedHosts": "*"
 }
+
