added swagger authentication

--- a/OrderManagement.Api/appsettings.json
+++ b/OrderManagement.Api/appsettings.json
@@ -13,6 +13,9 @@
     "Issuer": "OrderManagementApi",
     "Audience": "OrderManagementClient"
   },
+  "SeedData": {
+    "Enabled": false
+  },
   "AllowedHosts": "*"
 }
 
